Adds proper JVM settings for the performance test.